--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@ p {line-height: 2}
   <div class="w3-content">
     <h1 class="w3-center w3-text-grey"><b>Lauren & Ryan</b></h1>
     <img class="w3-round w3-grayscale-min" src="./img/img3.jpg" style="width:100%;margin:32px 0">
-    <p><i>You all know us. And we all know you. We are getting married lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-      laboris nisi ut aliquip ex ea commodo consequat.</i>
+    <p><i>You guys already know it. Ryan Chou and Lauren Jane Taylor are maddly in love. And what does one do when they're head over heels in love? They pop the question. And so I ask you LJ Tay: Will you marry me?</i>
     </p><br>
     <p class="w3-center"><a href="#wedding" class="w3-button w3-black w3-round w3-padding-large w3-large">Wedding Details</a></p>
   </div>
